Java 17 compatible